--- a/views/delete.ejs
+++ b/views/delete.ejs
@@ -21,7 +21,10 @@
             <h1>Delete Person from Database</h1>
 
             <form id="Delete">
-
+                <span>Type the name of the person you would like to delete:<br>
+                    <input type="text" name="nametodel" placeholder="full first and last name" required>
+                </span>
+                <button type="button" id="deletebtn" class="ylwbtn" >Delete!</button>
             </form>
 
 
