--- a/views/search.ejs
+++ b/views/search.ejs
@@ -20,21 +20,14 @@
         <main>
             <h1>Search for a person</h1>
             
-                <form method="POST" action="/search">
+                <form id="searchform" method="post" action="/search">
                     <span>
                         Person Name:<input type="text" name="search_term" placeholder="Enter search term">
                     </span>
-                    <button id="searchbtn">Search</button>
+                    <button id="searchbtn" class="ylwbtn" >Search</button>
                 </form>
-            
-
-
-
         </main>
-
     </body>
-
-
 </html>
 
 
