--- a/public/styles.css
+++ b/public/styles.css
@@ -58,7 +58,7 @@ span {
 }
 span > * { display:inline; }
 
-#calculatebtn, #resetbtn, #searchbtn, #insertbtn{
+*.ylwbtn{
     position:relative;
     background-color: rgb(255, 255, 159);
     padding: 10px;
@@ -69,7 +69,7 @@ span > * { display:inline; }
     margin-top: 10px;
 }
 
-#calculatebtn:hover, #resetbtn:hover, #searchbtn:hover, #insertbtn:hover {
+*.ylwbtn:hover{
     background-color: rgb(197, 197, 90);
 }
 #calculatebtn:active, #resetbtn:active, #searchbtn:active #insertbtn:active {
